--- a/server/package.json
+++ b/server/package.json
@@ -7,10 +7,15 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "@prisma/client": "^6.11.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^4.18.2",
     "nodemailer": "^7.0.3",
+    "sqlite3": "^5.1.7",
     "stripe": "^12.15.0"
+  },
+  "devDependencies": {
+    "prisma": "^6.11.1"
   }
 }
