--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^4.18.2",
+    "multer": "^2.0.1",
     "nodemailer": "^7.0.3",
     "sqlite3": "^5.1.7",
     "stripe": "^12.15.0"
